[package]
name = "curvo"
version = "0.1.26"
authors = ["Masatatsu Nakamura <masatatsu.nakamura@gmail.com"]
edition = "2021"
keywords = ["nurbs", "modeling", "graphics", "3d"]
categories = ["graphics"]
description = "NURBS modeling library"
homepage = "https://github.com/mattatz/curvo"
repository = "https://github.com/mattatz/curvo"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.81"
nalgebra = { version = "0.33.0", features = [
  "serde-serialize",
  "convert-glam025",
] }
num-traits = "0.2.18"
rand = "0.8.5"
rand_distr = { version = "0.4.3", default-features = false, optional = true }
easer = { version = "0.3.0", optional = true }
simba = { version = "0.9.0", default-features = false }
gauss-quad = "0.1.9"
bevy = { version = "0.13.2", optional = true }
bevy_egui = { version = "0.27.0", optional = true }
bevy-inspector-egui = { version = "0.24.0", optional = true }
bevy_infinite_grid = { version = "0.12", optional = true }
bevy_normal_material = { version = "0.5.2", optional = true }
bevy_panorbit_camera = { version = "0.18.0", optional = true }
bevy_points = { version = "0.5.1", optional = true }
argmin = "0.10.0"
itertools = "0.13.0"
log = { version = "0.4.21", optional = true }
serde = { version = "1.0.204", optional = true }

[target.wasm32-unknown-unknown.dependencies]
argmin = { version = "0.10.0", features = ["wasm-bindgen"] }

[dev-dependencies]
approx = { version = "0.5", default-features = false }
serde_json = "1.0.68"

[features]
default = []
# default = ["bevy"] # for debugging example
bevy = [
  "dep:easer",
  "dep:rand_distr",
  "dep:bevy",
  "dep:bevy_egui",
  "dep:bevy-inspector-egui",
  "dep:bevy_infinite_grid",
  "dep:bevy_normal_material",
  "dep:bevy_panorbit_camera",
  "dep:bevy_points"
]
log = ["dep:log"]
serde = ["dep:serde"]

[[example]]
name = "interpolate_curve"
path = "examples/interpolate_curve.rs"
required-features = ["bevy"]

[[example]]
name = "periodic_interpolate_curve"
path = "examples/periodic_interpolate_curve.rs"
required-features = ["bevy"]

[[example]]
name = "circle_curve"
path = "examples/circle_curve.rs"
required-features = ["bevy"]

[[example]]
name = "ellipse_arc_curve"
path = "examples/ellipse_arc_curve.rs"
required-features = ["bevy"]

[[example]]
name = "polyline_curve"
path = "examples/polyline_curve.rs"
required-features = ["bevy"]

[[example]]
name = "trim_curve"
path = "examples/trim_curve.rs"
required-features = ["bevy"]

[[example]]
name = "loft_surface"
path = "examples/loft_surface.rs"
required-features = ["bevy"]

[[example]]
name = "sweep_surface"
path = "examples/sweep_surface.rs"
required-features = ["bevy"]

[[example]]
name = "revolve_surface"
path = "examples/revolve_surface.rs"
required-features = ["bevy"]

[[example]]
name = "frenet_frame"
path = "examples/frenet_frame.rs"
required-features = ["bevy"]

[[example]]
name = "decompose_curve_into_bezier_segments"
path = "examples/decompose_curve_into_bezier_segments.rs"
required-features = ["bevy"]

[[example]]
name = "divide_curve_by_arc_length"
path = "examples/divide_curve_by_arc_length.rs"
required-features = ["bevy"]

[[example]]
name = "multiple_degree_curves"
path = "examples/multiple_degree_curves.rs"
required-features = ["bevy"]

[[example]]
name = "intersect_curves"
path = "examples/intersect_curves.rs"
required-features = ["bevy"]

[[example]]
name = "iso_curves"
path = "examples/iso_curves.rs"
required-features = ["bevy"]

[[example]]
name = "boundary_curves"
path = "examples/boundary_curves.rs"
required-features = ["bevy"]
