[package]
name = "curvo"
version = "0.1.39"
authors = ["Masatatsu Nakamura <masatatsu.nakamura@gmail.com"]
edition = "2021"
keywords = ["nurbs", "modeling", "graphics", "3d"]
categories = ["graphics"]
description = "NURBS modeling library"
homepage = "https://github.com/mattatz/curvo"
repository = "https://github.com/mattatz/curvo"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.94"
nalgebra = { version = "0.33.2", features = [
  "serde-serialize"
] }
num-traits = "0.2.19"
rand = "0.8.5"
rand_distr = { version = "0.4.3", default-features = false, optional = true }
robust = { version = "1.1.0" }
easer = { version = "0.3.0", optional = true }
simba = { version = "0.9.0", default-features = false }
spade = { version = "2.12.1" }
gauss-quad = "0.2.1"
bevy = { version = "0.15.0", optional = true }
bevy_egui = { version = "0.31.1", optional = true }
bevy-inspector-egui = { version = "0.28.0", optional = true }
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid.git", rev = "1b27619cc5c44d4e939e63345cddc1954e4123db", optional = true }
bevy_normal_material = { version = "0.7.0", optional = true }
bevy_panorbit_camera = { version = "0.21.1", optional = true }
bevy_points = { version = "0.7.0", optional = true }
argmin = "0.10.0"
itertools = "0.13.0"
log = { version = "0.4.22", optional = true }
serde = { version = "1.0.216", optional = true }

[target.wasm32-unknown-unknown.dependencies]
argmin = { version = "0.10.0", features = ["wasm-bindgen"] }

[dev-dependencies]
approx = { version = "0.5", default-features = false }
serde_json = "1.0.133"

[features]
# default = []
default = ["bevy"] # for debugging example
bevy = [
  "dep:easer",
  "dep:rand_distr",
  "dep:bevy",
  "dep:bevy_egui",
  "dep:bevy-inspector-egui",
  "dep:bevy_infinite_grid",
  "dep:bevy_normal_material",
  "dep:bevy_panorbit_camera",
  "dep:bevy_points",
  "nalgebra/convert-glam029"
]
log = ["dep:log"]
serde = ["dep:serde"]

[[example]]
name = "interpolate_curve"
path = "examples/interpolate_curve.rs"
required-features = ["bevy"]

[[example]]
name = "periodic_interpolate_curve"
path = "examples/periodic_interpolate_curve.rs"
required-features = ["bevy"]

[[example]]
name = "circle_curve"
path = "examples/circle_curve.rs"
required-features = ["bevy"]

[[example]]
name = "ellipse_arc_curve"
path = "examples/ellipse_arc_curve.rs"
required-features = ["bevy"]

[[example]]
name = "polyline_curve"
path = "examples/polyline_curve.rs"
required-features = ["bevy"]

[[example]]
name = "trim_curve"
path = "examples/trim_curve.rs"
required-features = ["bevy"]

[[example]]
name = "loft_surface"
path = "examples/loft_surface.rs"
required-features = ["bevy"]

[[example]]
name = "sweep_surface"
path = "examples/sweep_surface.rs"
required-features = ["bevy"]

[[example]]
name = "revolve_surface"
path = "examples/revolve_surface.rs"
required-features = ["bevy"]

[[example]]
name = "trimmed_surface"
path = "examples/trimmed_surface.rs"
required-features = ["bevy"]

[[example]]
name = "frenet_frame"
path = "examples/frenet_frame.rs"
required-features = ["bevy"]

[[example]]
name = "decompose_curve_into_bezier_segments"
path = "examples/decompose_curve_into_bezier_segments.rs"
required-features = ["bevy"]

[[example]]
name = "divide_curve_by_arc_length"
path = "examples/divide_curve_by_arc_length.rs"
required-features = ["bevy"]

[[example]]
name = "multiple_degree_curves"
path = "examples/multiple_degree_curves.rs"
required-features = ["bevy"]

[[example]]
name = "intersect_curves"
path = "examples/intersect_curves.rs"
required-features = ["bevy"]

[[example]]
name = "intersect_surface_curve"
path = "examples/intersect_surface_curve.rs"
required-features = ["bevy"]

[[example]]
name = "iso_curves"
path = "examples/iso_curves.rs"
required-features = ["bevy"]

[[example]]
name = "boundary_curves"
path = "examples/boundary_curves.rs"
required-features = ["bevy"]

[[example]]
name = "boolean_curves"
path = "examples/boolean_curves.rs"
required-features = ["bevy"]

[[example]]
name = "boolean_curves_animation"
path = "examples/boolean_curves_animation.rs"
required-features = ["bevy"]

[[example]]
name = "closest_point_on_surface"
path = "examples/closest_point_on_surface.rs"
required-features = ["bevy"]
